--- a/template/server.conf
+++ b/template/server.conf
@@ -36,7 +36,7 @@ server {
 
         # Sets the address of a FastCGI server. The address can be specified as a
         # domain name or IP address, and a port, or as a UNIX-domain socket path.
-        fastcgi_pass laravel-docker-template_laravel:9000;
+        fastcgi_pass {* container.laravel *}:9000;
 
         # Sets a file name that will be appended after a URI that ends with a slash,
         # in the value of the $fastcgi_script_name variable.
