--- a/template/server.conf
+++ b/template/server.conf
@@ -3,7 +3,7 @@ server {
     listen [::]:80 default ipv6only=on;
     server_name _;
 
-    root /var/www/html/public;
+    root /usr/share/nginx/html/public;
     index index.php index.html index.htm;
     error_page 404 /index.php;
     charset utf-8;
