--- a/template/server.conf
+++ b/template/server.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80;
-    listen [::]:80 default ipv6only=on;
+    listen 8080;
+    listen [::]:8080 default ipv6only=on;
     server_name _;
 
     root /usr/share/nginx/html/public;
@@ -28,6 +28,8 @@ server {
     }
 
     location ~ \.php$ {
+
+        root /var/www/html/public;
 
         # Defines a regular expression that captures two values. The first becomes the
         # value of the $fastcgi_script_name variable, the second becomes the value of
